JAVA-260: Changed deprecated Integer boxing approach.